Added new item for projects.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
         <article class="socials">
           <div class="social-item">
-            <img src="./assets/iconmonstr-github-1-64.png" alt="Github logo" />
+            <img src="./assets/iconmonstr-github-1-64.png" alt="GitHub logo" />
             <a
               href="https://github.com/timtangonan"
               target="_blank"
@@ -105,7 +105,8 @@
                 hosted on <em>Render</em>. Content is powered by
                 <em>Hygraph</em> — formerly <em>GraphCMS</em> — which primarily
                 uses <em>GraphQL</em> to interact with the API. Styled with
-                <em>TailwindCSS</em>.
+                <em>TailwindCSS</em>. Page is hosted on <em>Render</em> and
+                deployed through <em>Github</em>.
               </p>
             </div>
           </a>
@@ -123,7 +124,28 @@
                 Created a website for my mother where she can document and share
                 her thoughts. Front-end framework used for the project is
                 <em>Next.js</em>. Styled using <em>TailwindCSS</em>. Content
-                management system provided by <em>Contentful</em>.
+                management system provided by <em>Contentful</em> and hosted on
+                <em>Netlify</em> and deployed through <em>GitHub</em>.
+              </p>
+            </div>
+          </a>
+        </article>
+        <article class="card">
+          <a
+            href="https://ling-cookbook.netlify.app/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="card-content">
+              <h3>My Wife's Recipe Site</h3>
+              <p class="link-text">https://ling-cookbook.netlify.app/</p>
+              <p class="project-description">
+                Built a website where my wife can add recipes through
+                <em>Prismic.io</em> and refer to them conveniently on mobile
+                while cooking. Items for ingredients and procedures are
+                toggle-able to indicate completed status. Front-end framework
+                used is <em>Next.js</em>. Site is hosted on <em>Netlify</em> and
+                deployed through <em>GitLab</em>.
               </p>
             </div>
           </a>
