--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
               >Download Résumé</a
             >
           </button>
+          <button>
+            <a
+              href="mailto:trstangonan@gmail.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Send a Message</a
+            >
+          </button>
         </div>
       </section>
     </div>
