--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               href="mailto:trstangonan@gmail.com"
               target="_blank"
               rel="noopener noreferrer"
-              >Send a Message</a
+              >Email Me <span role="img" aria-label="heart-sealed envelope">💌</span></a
             >
           </button>
         </div>
